Models finished & Attacking logic added

--- a/config/battle-config.properties
+++ b/config/battle-config.properties
@@ -1,13 +1,40 @@
+####################################
 ### Default Battle configuration ###
-# armies
+####################################
+# armies [2..n]
 min_armies = 2
 
-# squads
+# squads [2..n]
 min_squads_per_army = 2
 
-# units (including)
+# units (including) [5..10]
 min_units_per_squad = 5
 max_units_per_squad = 10
 
 # attack strategies
 strategies=random|weakest|strongest
+
+##################################
+### Default Unit configuration ###
+##################################
+# health
+default_health = 100
+min_health = 0
+max_health = 100
+
+# recharge
+default_recharge = 1000
+min_soldier_recharge = 100
+max_soldier_recharge = 2000
+min_vehicle_recharge = 1000
+max_vehicle_recharge = 2000
+
+# experience
+default_experience = 0
+min_experience = 0
+max_experience = 50
+
+# num of operators
+default_num_of_operators = 3
+min_num_of_operators = 1
+max_num_of_operators = 3
