--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Milos Djukic",
   "license": "ISC",
   "dependencies": {
+    "async-lock": "^1.1.0",
     "config": "^1.29.2",
     "properties-reader": "0.0.16",
     "winston": "^2.4.0"
